pushing pizza file for revalidation

--- a/OntoEnricher/src/Final.ipynb
+++ b/OntoEnricher/src/Final.ipynb
@@ -1752,371 +1752,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pickledb\n",
-    "prefix = \"../junk/db_files/\"\n",
-    "word2id_db = pickledb.load(prefix + \"w2i.db\", False)\n",
-    "allkeys = list(word2id_db.getall())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dropping  tylgiv\n",
-      "Dropping  valtra\n",
-      "Dropping  matsika\n",
-      "Dropping  frenstrup\n",
-      "Dropping  kakkassery\n",
-      "Dropping  only martelly\n",
-      "Dropping  n700\n",
-      "Dropping  mitteldeutschland\n",
-      "Dropping  n5348a\n",
-      "Dropping  hiramic\n",
-      "Dropping  defined fields\n",
-      "Dropping  the s j p harvie professor\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in thread Thread-15154:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/threading.py\", line 926, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/threading.py\", line 870, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/json/__init__.py\", line 179, in dump\n",
-      "    for chunk in iterable:\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/json/encoder.py\", line 431, in _iterencode\n",
-      "    yield from _iterencode_dict(o, _current_indent_level)\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/json/encoder.py\", line 356, in _iterencode_dict\n",
-      "    for key, value in items:\n",
-      "RuntimeError: dictionary changed size during iteration\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dropping  a terminating binary expansion\n",
-      "Dropping  the online canvas design elements\n",
-      "Dropping  the instantaneous angular velocity vector\n",
-      "Dropping  fitting anorexic illnesses\n",
-      "Dropping  a 1920s proposal\n",
-      "Dropping  an international non profit and non governmental student society\n",
-      "Dropping  william a trimble\n",
-      "Dropping  a provincial regiment\n",
-      "Dropping  first real studio experience\n",
-      "Dropping  a lycoming o 360 a4 m\n",
-      "Dropping  other graphics systems\n",
-      "Dropping  polish tradition\n",
-      "Dropping  a practising teacher\n",
-      "Dropping  close diplomatic and economic relationships\n",
-      "Dropping  kiley\n",
-      "Dropping  original or reconstructed fabric\n",
-      "Dropping  scriptural or customary laws\n",
-      "Dropping  national economics challenge champions\n",
-      "Dropping  a long horizontal jump\n",
-      "Dropping  the open bloodstream\n",
-      "Dropping  the officer s blooded horses\n",
-      "Dropping  classical comedy\n",
-      "Dropping  the continental exchanges\n",
-      "Dropping  the most frequent uses\n",
-      "Dropping  major local developers\n",
-      "Dropping  184 restaurants\n",
-      "Dropping  maria s young son\n",
-      "Dropping  utsu\n",
-      "Dropping  archeologist hugo winckler\n",
-      "Dropping  zp120\n",
-      "Dropping  the early 1950s dubuffet\n",
-      "Dropping  merina and betsileo families\n",
-      "Dropping  impersonalization\n",
-      "Dropping  all necessary activities\n",
-      "Dropping  more complex background settings\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in thread Thread-15446:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/threading.py\", line 926, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/threading.py\", line 870, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/json/__init__.py\", line 179, in dump\n",
-      "    for chunk in iterable:\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/json/encoder.py\", line 431, in _iterencode\n",
-      "    yield from _iterencode_dict(o, _current_indent_level)\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/json/encoder.py\", line 356, in _iterencode_dict\n",
-      "    for key, value in items:\n",
-      "RuntimeError: dictionary changed size during iteration\n",
-      "\n",
-      "Exception in thread Thread-15449:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/threading.py\", line 926, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/threading.py\", line 870, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/json/__init__.py\", line 179, in dump\n",
-      "    for chunk in iterable:\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/json/encoder.py\", line 431, in _iterencode\n",
-      "    yield from _iterencode_dict(o, _current_indent_level)\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/json/encoder.py\", line 356, in _iterencode_dict\n",
-      "    for key, value in items:\n",
-      "RuntimeError: dictionary changed size during iteration\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dropping  periodic recitals\n",
-      "Dropping  last weekend s post coup presidential election\n",
-      "Dropping  so2 james suh\n",
-      "Dropping  silvie iii\n",
-      "Dropping  pot au feu\n",
-      "Dropping  its operational readiness\n",
-      "Dropping  no one reason\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in thread Thread-15472:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/threading.py\", line 926, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/threading.py\", line 870, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/json/__init__.py\", line 179, in dump\n",
-      "    for chunk in iterable:\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/json/encoder.py\", line 431, in _iterencode\n",
-      "    yield from _iterencode_dict(o, _current_indent_level)\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/json/encoder.py\", line 356, in _iterencode_dict\n",
-      "    for key, value in items:\n",
-      "RuntimeError: dictionary changed size during iteration\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dropping  the exterior mirror\n",
-      "Dropping  free agent greg holland\n",
-      "Dropping  keio university hospital\n",
-      "Dropping  negative at skew\n",
-      "Dropping  the former coalfield area\n",
-      "Dropping  a coherent personality\n",
-      "Dropping  intevation\n",
-      "Dropping  fgm 148 javelin\n",
-      "Dropping  17 august robert ritter von greim s fliegerkorps v\n",
-      "Dropping  neither military training\n",
-      "Dropping  self service passport control\n",
-      "Dropping  sierra s salon\n",
-      "Dropping  general no l de castelnau\n",
-      "Dropping  debra delee\n",
-      "Dropping  davis second term\n",
-      "Dropping  the oldest literary account\n",
-      "Dropping  each wall inlet\n",
-      "Dropping  the people s nomadic heritage\n",
-      "Dropping  glasgow academicals\n",
-      "Dropping  fine v fib\n",
-      "Dropping  flat end facets\n",
-      "Dropping  dense grids\n",
-      "Dropping  professor dominique martin\n",
-      "Dropping  the fastest overall driver\n",
-      "Dropping  their sledging rations\n",
-      "Dropping  the lambda company\n",
-      "Dropping  the additional rail\n",
-      "Dropping  maintenance flaws\n",
-      "Dropping  a 75 cm long bundle\n",
-      "Dropping  179 fs\n",
-      "Dropping  military miniatures\n",
-      "Dropping  performance and management flexibility\n",
-      "Dropping  two state run polytechnic schools\n",
-      "Dropping  scriabin s museum\n",
-      "Dropping  protestant dublin lawyer theobald wolfe tone\n",
-      "Dropping  16 canadians\n",
-      "Dropping  the individual coal plots\n",
-      "Dropping  i e visemes\n",
-      "Dropping  a e36 m3 compact prototype\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in thread Thread-15713:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/threading.py\", line 926, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/threading.py\", line 870, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/json/__init__.py\", line 179, in dump\n",
-      "    for chunk in iterable:\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/json/encoder.py\", line 431, in _iterencode\n",
-      "    yield from _iterencode_dict(o, _current_indent_level)\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/json/encoder.py\", line 356, in _iterencode_dict\n",
-      "    for key, value in items:\n",
-      "RuntimeError: dictionary changed size during iteration\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dropping  sal n de la paz\n",
-      "Dropping  brian williams lustmord project\n",
-      "Dropping  an exponential behavior\n",
-      "Dropping  this uncommon case\n",
-      "Dropping  only 13 more performances\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in thread Thread-15739:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/threading.py\", line 926, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/threading.py\", line 870, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/json/__init__.py\", line 179, in dump\n",
-      "    for chunk in iterable:\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/json/encoder.py\", line 431, in _iterencode\n",
-      "    yield from _iterencode_dict(o, _current_indent_level)\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/json/encoder.py\", line 356, in _iterencode_dict\n",
-      "    for key, value in items:\n",
-      "RuntimeError: dictionary changed size during iteration\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dropping  then a third wrestling team\n",
-      "Dropping  an old watch\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in thread Thread-15748:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/threading.py\", line 926, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/threading.py\", line 870, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/json/__init__.py\", line 179, in dump\n",
-      "    for chunk in iterable:\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/json/encoder.py\", line 431, in _iterencode\n",
-      "    yield from _iterencode_dict(o, _current_indent_level)\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/json/encoder.py\", line 356, in _iterencode_dict\n",
-      "    for key, value in items:\n",
-      "RuntimeError: dictionary changed size during iteration\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dropping  a sophisticated propaganda machine\n",
-      "Dropping  a successful and effective program\n",
-      "Dropping  50 s strongest track\n",
-      "Dropping  the yshphh\n",
-      "Dropping  the estimated sinking position\n",
-      "Dropping  phoenix s citizens\n",
-      "Dropping  the cbbb\n",
-      "Dropping  re arranged panels\n",
-      "Dropping  his 50th birthday celebration\n",
-      "Dropping  the male eggs\n",
-      "Dropping  montane meadows\n",
-      "Dropping  the troops good spirit\n",
-      "Dropping  paltrow s performance\n",
-      "Dropping  a free demonstration\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in thread Thread-15808:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/threading.py\", line 926, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/threading.py\", line 870, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/json/__init__.py\", line 179, in dump\n",
-      "    for chunk in iterable:\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/json/encoder.py\", line 431, in _iterencode\n",
-      "    yield from _iterencode_dict(o, _current_indent_level)\n",
-      "  File \"/home/vlead/anaconda3/lib/python3.7/json/encoder.py\", line 356, in _iterencode_dict\n",
-      "    for key, value in items:\n",
-      "RuntimeError: dictionary changed size during iteration\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dropping  roxy attempts\n",
-      "Dropping  either deletion\n",
-      "Dropping  frictional behavior\n",
-      "Dropping  four successive popes\n",
-      "Dropping  engineering design teams\n",
-      "Dropping  felix the cat\n",
-      "Dropping  tidal venuses\n",
-      "Dropping  dsquared2 duo dean and dan caten\n",
-      "Dropping  cooper s most important film\n",
-      "Dropping  consistent subtest scores\n",
-      "Dropping  frances hegarty\n",
-      "Dropping  borland s guitar playing\n",
-      "Dropping  ahsura\n",
-      "Dropping  an unnamed polish clone\n",
-      "Dropping  at least the a credit rating\n",
-      "Dropping  a radio based transatlantic telephone service\n",
-      "Dropping  carddass exclusive storyline series\n",
-      "Dropping  a balance sheet hedge\n",
-      "Dropping  bluebush saltbush steppe\n"
+     "ename": "NameError",
+     "evalue": "name 'american' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-19-771ed15c4a4d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0meval\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'american'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<string>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'american' is not defined"
      ]
     }
    ],
    "source": [
-    "word2id_db_corrected = pickledb.load(prefix + \"w2i_corrected.db\", True)\n",
-    "id2word_db_corrected = pickledb.load(prefix + \"i2w_corrected.db\", True)\n",
-    "allkeys = list(word2id_db.getall())\n",
-    "for key in allkeys:\n",
+    "eval('american')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lines = [l.split(\"\\t\")[:4] for l in open(\"../files/dataset/pizza_train.tsv\").read().split(\"\\n\")[1:] + open(\"../files/dataset/pizza_test.tsv\").read().split(\"\\n\")]\n",
+    "lines = [(line[0], line[1], \"none\") if line[3]==\"icecream\" else (line[0], line[1], line[3]) if line[3] else (line[0], line[1], line[2]) for line in lines]\n",
+    "filtered_lines = []\n",
+    "for line in lines:\n",
     "    try:\n",
-    "        word2id_db_corrected[preprocess_word(nlp(key))] = word2id_db[key]\n",
-    "        id2word_db_corrected[word2id_db[key]] = preprocess_word(nlp(key))\n",
+    "        desc = desc_dict[line[:2]]\n",
     "    except:\n",
-    "        print (\"Dropping \", key)\n",
-    "        word2id_db_corrected[key] = word2id_db[key]\n",
-    "        id2word_db_corrected[word2id_db[key]] = key\n",
-    "word2id_db_corrected.dump()\n",
-    "id2word_db_corrected.dump()"
+    "        try:\n",
+    "            desc = desc_dict[(eval(line[0]), line[1])]\n",
+    "        except:\n",
+    "            try:\n",
+    "                desc = desc_dict[(line[0], eval(line[1]))]\n",
+    "            except:\n",
+    "                print (line)\n",
+    "    filtered_lines.append(\"\\t\".join(list(line) + [desc]))\n",
+    "    \n",
+    "\n"
    ]
   },
   {
