Pushing pizza results

--- a/OntoEnricher/src/Final (Pizza).ipynb
+++ b/OntoEnricher/src/Final (Pizza).ipynb
@@ -2063,26 +2063,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.015409708023071289\n",
-      "0.0001728534698486328\n"
-     ]
+     "data": {
+      "text/plain": [
+       "2268"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import time\n",
-    "t = time.time()\n",
-    "a = nlp(\"beach on the ocean\")\n",
-    "print (time.time()-t)\n",
-    "t = time.time()\n",
-    "preprocess_word(a)\n",
-    "print (time.time()-t)"
+    "def extract_results(file):\n",
+    "    all_results = []\n",
+    "    instances_results_italian, instances_results_dominos = [], []\n",
+    "    for line in open(file).read().split(\"\\n\"):\n",
+    "        if line.startswith(\"Final Results (Instances_italianpizza\"):\n",
+    "            instances_results_italian.append((line.split(\")\")[0].split(\"_\")[-1], float(line.split(\"[\")[-1].split(\",\")[0])))\n",
+    "\n",
+    "    best_instance_italian = max(instances_results_italian, key=lambda el:el[1])\n",
+    "    \n",
+    "    for line in open(file).read().split(\"\\n\"):\n",
+    "        if line.startswith(\"Final Results (Instances_dominospizza\"):\n",
+    "            instances_results_dominos.append((line.split(\")\")[0].split(\"_\")[-1], float(line.split(\"[\")[-1].split(\",\")[0])))\n",
+    "    best_instance_dominos = max(instances_results_dominos, key=lambda el:el[1])\n",
+    "    \n",
+    "    for line in open(file).read().split(\"\\n\"):\n",
+    "        if line.startswith(\"Final Results\") and not line.startswith(\"Final Results (Instances\"):\n",
+    "            all_results.append((line.split(\")\")[0].split(\"(\")[-1], float(line.split(\" \")[-1].split(\"]\")[0])))\n",
+    "    all_results = [elem[1] for elem in sorted(all_results, key=lambda el:el[0], reverse=True)]\n",
+    "    all_results.extend(list(best_instance_italian))\n",
+    "    all_results.extend(list(best_instance_dominos))\n",
+    "    return all_results\n",
+    "\n",
+    "all_results = []\n",
+    "for file in glob.glob(\"../Results/results_pizza*\"):\n",
+    "#     print (file)\n",
+    "    if file.startswith(\"../Results/results_pizza\"):\n",
+    "        emb_dropout, hidden_dropout, output_dropout, NUM_LAYER, LAYER1_DIM, LAYER2_DIM = file.split(\"results_pizza\")[-1].rsplit(\".\",1)[0].split(\"_\")\n",
+    "    else:\n",
+    "        emb_dropout, hidden_dropout, output_dropout, NUM_LAYER, LAYER1_DIM, LAYER2_DIM = file.split(\"results_pizza\")[-1].rsplit(\".\",1)[0].split(\"_\")\n",
+    "    try:\n",
+    "        test, knocked, mode1, instance1, mode2, instance2 = extract_results(file)\n",
+    "    except:\n",
+    "        print (file)\n",
+    "        continue\n",
+    "    all_results.append(\"\\t\".join([emb_dropout, hidden_dropout, output_dropout, NUM_LAYER, LAYER1_DIM, LAYER2_DIM, str(test), str(knocked), str(instance1),  str(instance2), mode1 + \", \" + mode2]))\n",
+    "open(\"final_results_pizza.tsv\", \"w+\").write(\"\\n\".join(all_results))"
    ]
   },
   {
