Pushing security results v2

--- a/OntoEnricher/src/Final (Pizza).ipynb
+++ b/OntoEnricher/src/Final (Pizza).ipynb
@@ -2750,30 +2750,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'HYPER BOX TACKLES\\nATTACK TRAFFIC WITH\\nIXIA THREATARMOR\\nHyper Box, a veteran of the Japanese Internet industry, had\\nbeen suffering in recent years from a glut of cyberattacks. Since\\nthey were unable to utilize powerful security devices over the\\nshared network provided by they service, they were forced to\\nconstantly check logs and manually respond to attacks on a\\ndaily basis.'"
+       "Systems"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nlp(\"\"\"HYPER BOX TACKLES\n",
-    "ATTACK TRAFFIC WITH\n",
-    "IXIA THREATARMOR\n",
-    "Hyper Box, a veteran of the Japanese Internet industry, had\n",
-    "been suffering in recent years from a glut of cyberattacks. Since\n",
-    "they were unable to utilize powerful security devices over the\n",
-    "shared network provided by their service, they were forced to\n",
-    "constantly check logs and manually respond to attacks on a\n",
-    "daily basis.\"\"\")._.coref_resolved"
+    "list(nlp(\"IBM Internet Security Systems\").noun_chunks)[0].root"
    ]
   },
   {
