Pushing final datasets

--- a/OntoEnricher/src/Final (Pizza).ipynb
+++ b/OntoEnricher/src/Final (Pizza).ipynb
@@ -2083,7 +2083,7 @@
     "    instances_results_italian, instances_results_dominos = [], []\n",
     "    for line in open(file).read().split(\"\\n\"):\n",
     "        if line.startswith(\"Final Results (Instances_italianpizza\"):\n",
-    "            instances_results_italian.append((line.split(\")\")[0].split(\"_\")[-1], float(line.split(\"[\")[-1].split(\",\")[0])))\n",
+    "            instances_results_italian.append(6)\n",
     "\n",
     "    best_instance_italian = max(instances_results_italian, key=lambda el:el[1])\n",
     "    \n",
