--- a/OntoEnricher/src/Final.ipynb
+++ b/OntoEnricher/src/Final.ipynb
@@ -616,23 +616,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "('it systems',\n",
-       " 'X/NOUN/conj>_operation/NOUN/ROOT_<security/NOUN/conj_<Y/NOUN/conj')"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A a DET DT det\n",
+      "major major ADJ JJ amod\n",
+      "change change NOUN NN nsubj\n",
+      "with with ADP IN prep\n",
+      "this this DET DT det\n",
+      "model model NOUN NN pobj\n",
+      "of of ADP IN prep\n",
+      "real real ADJ JJ amod\n",
+      "- - PUNCT HYPH punct\n",
+      "time time NOUN NN nmod\n",
+      "adaptive adaptive ADJ JJ amod\n",
+      "security security NOUN NN pobj\n",
+      "is be VERB VBZ aux\n",
+      "shifting shift VERB VBG ROOT\n",
+      "authorization authorization NOUN NN compound\n",
+      "management management NOUN NN dobj\n",
+      "and and CCONJ CC cc\n",
+      "policy policy NOUN NN conj\n",
+      "to to ADP IN prep\n",
+      "an an DET DT det\n",
+      "on on ADP IN nmod\n",
+      "- - PUNCT HYPH punct\n",
+      "demand demand NOUN NN pobj\n",
+      "service service NOUN NN pobj\n",
+      "that that DET WDT nsubj\n",
+      "contains contain VERB VBZ relcl\n",
+      "details detail NOUN NNS dobj\n",
+      "and and CCONJ CC cc\n",
+      "policy policy NOUN NN compound\n",
+      "enforcement enforcement NOUN NN conj\n",
+      "that that DET WDT nsubj\n",
+      "matches match VERB VBZ relcl\n",
+      "compliance compliance NOUN NN dobj\n",
+      "and and CCONJ CC cc\n",
+      "can can VERB MD aux\n",
+      "adapt adapt VERB VB conj\n",
+      "to to ADP IN prep\n",
+      "the the DET DT det\n",
+      "user user NOUN NN poss\n",
+      "'s 's PART POS case\n",
+      "situation situation NOUN NN pobj\n",
+      "when when ADV WRB advmod\n",
+      "he -PRON- PRON PRP nsubj\n",
+      "or or CCONJ CC cc\n",
+      "she -PRON- PRON PRP conj\n",
+      "is be VERB VBZ aux\n",
+      "trying try VERB VBG advcl\n",
+      "to to PART TO aux\n",
+      "access access VERB VB xcomp\n",
+      "an an DET DT det\n",
+      "application application NOUN NN dobj\n",
+      ", , PUNCT , punct\n",
+      "for for ADP IN prep\n",
+      "instance instance NOUN NN pobj\n",
+      ". . PUNCT . punct\n"
+     ]
     }
    ],
    "source": [
-    "id2word_db['10074857'], id2path_db['4835331']"
+    "import spacy\n",
+    "\n",
+    "\n",
+    "doc = nlp(\"A major change with this model of real-time adaptive security is shifting authorization management and policy to an on-demand service that contains details and policy enforcement that matches compliance and can adapt to the user's situation when he or she is trying to access an application, for instance.\")\n",
+    "\n",
+    "for token in doc:\n",
+    "    print(token.text, token.lemma_, token.pos_, token.tag_, token.dep_)\n"
    ]
   },
   {
