Pushing updated results

--- a/OntoEnricher/src/Final.ipynb
+++ b/OntoEnricher/src/Final.ipynb
@@ -1598,9 +1598,6 @@
     "        current_idx += elem\n",
     "    return split_security_file\n",
     "\n",
-    "\n",
-    "def fn(a,b):\n",
-    "    print (a,b)\n",
     "lemmatizer = WordNetLemmatizer()\n",
     "all_files = sorted(glob.glob(\"../files/dataset/security_outputs/*\"))\n",
     "main_security_file = [l.split(\"\\t\") for l in open(\"../Outputs/security_validated.tsv\").read().split(\"\\n\")]\n",
@@ -1621,22 +1618,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'../Lalit-results/Security/DBaccess.tsv'"
+       "['../files/dataset/security_outputs/BankInfoSecurity.tsv',\n",
+       " '../files/dataset/security_outputs/Cloud.tsv',\n",
+       " '../files/dataset/security_outputs/DBaccess.tsv',\n",
+       " '../files/dataset/security_outputs/Data center.tsv',\n",
+       " '../files/dataset/security_outputs/Dell.tsv',\n",
+       " '../files/dataset/security_outputs/IBMQadar.tsv',\n",
+       " '../files/dataset/security_outputs/Microsoft.tsv',\n",
+       " '../files/dataset/security_outputs/Wellsargo.tsv',\n",
+       " '../files/dataset/security_outputs/accesscontrol.tsv',\n",
+       " '../files/dataset/security_outputs/all-seeing-eye-sauron-powershell-tool-data-collection-threat-hunting-39890.tsv',\n",
+       " '../files/dataset/security_outputs/application.tsv',\n",
+       " '../files/dataset/security_outputs/broken.tsv',\n",
+       " '../files/dataset/security_outputs/brokenauth.tsv',\n",
+       " '../files/dataset/security_outputs/checkpoint.tsv',\n",
+       " '../files/dataset/security_outputs/checkpoint1.tsv',\n",
+       " '../files/dataset/security_outputs/color_profile.tsv',\n",
+       " '../files/dataset/security_outputs/compliance-benchmarks-cloud-custodian-39830.tsv',\n",
+       " '../files/dataset/security_outputs/database.tsv',\n",
+       " '../files/dataset/security_outputs/database1.tsv',\n",
+       " '../files/dataset/security_outputs/databreach.tsv',\n",
+       " '../files/dataset/security_outputs/dataencode.tsv',\n",
+       " '../files/dataset/security_outputs/digiiden.tsv',\n",
+       " '../files/dataset/security_outputs/enhancing-security-capabilities-ubiquiti-unifi-security-gateway-usg-39875.tsv',\n",
+       " '../files/dataset/security_outputs/errorhandle.tsv',\n",
+       " '../files/dataset/security_outputs/firebase-google-clouds-evil-twin-39885.tsv',\n",
+       " '../files/dataset/security_outputs/fireeye.tsv',\n",
+       " '../files/dataset/security_outputs/hyperbox.tsv',\n",
+       " '../files/dataset/security_outputs/insecure.tsv',\n",
+       " '../files/dataset/security_outputs/insufflog.tsv',\n",
+       " '../files/dataset/security_outputs/invaders-internet-connected-home-39855.tsv',\n",
+       " '../files/dataset/security_outputs/keysight.tsv',\n",
+       " '../files/dataset/security_outputs/keysight2.tsv',\n",
+       " '../files/dataset/security_outputs/keystone.tsv',\n",
+       " '../files/dataset/security_outputs/mitigating-risk-csa-12-critical-risks-serverless-applications-39845.tsv',\n",
+       " '../files/dataset/security_outputs/play-game-analyzing-security-cloud-gaming-services-39865.tsv',\n",
+       " '../files/dataset/security_outputs/poisoned-postman-detecting-manipulation-compliance-features-microsoft-exchange-online-environment-39850.tsv',\n",
+       " '../files/dataset/security_outputs/prescriptive-model-software-supply-chain-assurance-private-cloud-environments-39895.tsv',\n",
+       " '../files/dataset/security_outputs/protectdata.tsv',\n",
+       " '../files/dataset/security_outputs/remote-penetration-testing-ninja-pi-39835.tsv',\n",
+       " '../files/dataset/security_outputs/secframe.tsv',\n",
+       " '../files/dataset/security_outputs/secreq.tsv',\n",
+       " '../files/dataset/security_outputs/security-network-auditing-zero-trust-achieved-39825.tsv',\n",
+       " '../files/dataset/security_outputs/securitymis.tsv',\n",
+       " '../files/dataset/security_outputs/securitynetwork.tsv',\n",
+       " '../files/dataset/security_outputs/sensitive.tsv',\n",
+       " '../files/dataset/security_outputs/sqlinj.tsv',\n",
+       " '../files/dataset/security_outputs/startups-guide-implementing-security-program-39880.tsv',\n",
+       " '../files/dataset/security_outputs/strings-me-linux-ransomware-39870.tsv',\n",
+       " '../files/dataset/security_outputs/target.tsv',\n",
+       " '../files/dataset/security_outputs/unknowncomp.tsv',\n",
+       " '../files/dataset/security_outputs/validateinput.tsv',\n",
+       " '../files/dataset/security_outputs/xss.tsv',\n",
+       " '../files/dataset/security_outputs/xxe.tsv',\n",
+       " '../files/dataset/security_outputs/zeroday-threats.tsv']"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from shutil import copy\n"
+    "all_files"
    ]
   },
   {
