nodes db write fixed

--- a/OntoViewer/src/onto_app/Untitled.ipynb
+++ b/OntoViewer/src/onto_app/Untitled.ipynb
@@ -13,23 +13,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(1, 'pizza', 0)]"
+       "[(1, 1, 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#Pizza'),\n",
+       " (2, 1, 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#Peri-Peri'),\n",
+       " (3, 1, 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#TandooriPizza'),\n",
+       " (4, 1, 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#IndianPizza'),\n",
+       " (5, 1, \"https://serc.iiit.ac.in/downloads/ontology/pizza.owl#Domino'SPizza\"),\n",
+       " (6, 1, 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#Pizza'),\n",
+       " (7, 1, 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#Pizza'),\n",
+       " (8, 1, 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#Marinara'),\n",
+       " (9, 2, 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#Authentication'),\n",
+       " (10, 2, 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#Authorization'),\n",
+       " (11, 2, 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#Firewall'),\n",
+       " (12, 2, 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#NetworkSecurity'),\n",
+       " (13, 2, 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#Trojan'),\n",
+       " (14, 2, 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#Virus'),\n",
+       " (15, 2, 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#SecurityTeams'),\n",
+       " (16, 2, 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#PhysicalSecurity')]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "c = engine.connect()\n",
-    "results = c.execute(\"\"\"SELECT * FROM ontologies\"\"\")\n",
+    "results = c.execute(\"\"\"SELECT * FROM nodes\"\"\")\n",
     "results.fetchall()"
    ]
   },
